fixed homeContent mobile layout bug

--- a/styles.css
+++ b/styles.css
@@ -121,12 +121,14 @@ button:hover:not(.navbar-toggler) {
     background-color: var(--white);
     width: auto;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-
-
 }
 
 .homeContentBox {
     padding: 8px;
+}
+.homeContentBox figure{
+    max-width: 250px;
+    max-height: 250px;
 }
 
 .homeImg {
